[*] Bug fixes and visual adjustments

--- a/apps/money-tracker-ui/src/app/accounts/exchange/exchange.component.html
+++ b/apps/money-tracker-ui/src/app/accounts/exchange/exchange.component.html
@@ -96,6 +96,7 @@
 
   <app-entity-list [resultItemTemplate]="exchangeTable"
                    [table]="true"
+                   [loadOnInit]="false"
                    [searchRequest]="{
                         queryArguments: getQueryArguments(),
                         queryName: 'events'
