--- a/apps/money-tracker-ui/src/app/organizations/organization/organization.component.html
+++ b/apps/money-tracker-ui/src/app/organizations/organization/organization.component.html
@@ -20,7 +20,7 @@
   </div>
 </div>
 
-<div class='row' *ngIf="option.xAxis?.data?.length > 1">
+<div class='row'>
   <div class='col-12'>
     <div echarts [options]="option" [loading]="loading"></div>
   </div>
