[+] Added income chart step 1

--- a/apps/money-tracker-ui/src/app/header/header.component.html
+++ b/apps/money-tracker-ui/src/app/header/header.component.html
@@ -16,33 +16,39 @@
           <mat-icon fontIcon="savings"></mat-icon> Accounts</a>
         <a mat-list-item
            routerLinkActive="active-link"
+           routerLink="/income">
+          <mat-icon fontIcon="trending_up"></mat-icon> Income</a>
+        <a mat-list-item
+           routerLinkActive="active-link"
            routerLink="/balance">
-          <mat-icon fontIcon="timeline"></mat-icon> Balance Monthly
+          <mat-icon fontIcon="balance"></mat-icon> Balance Monthly
         </a>
         <a mat-list-item
            routerLinkActive="active-link"
            routerLink="/exchange">
-          <mat-icon fontIcon="currency_exchange"></mat-icon> Currency Exchange</a>
+          <mat-icon fontIcon="currency_exchange"></mat-icon> Currency Exchange
+        </a>
         <a mat-list-item
            routerLinkActive="active-link"
            routerLink="/inOut">
-          <mat-icon fontIcon="balance"></mat-icon> Reselling</a>
+          <mat-icon fontIcon="trolley"></mat-icon> Reselling
+        </a>
         <a mat-list-item
            routerLinkActive="active-link"
            routerLink="/expenses">
-          <mat-icon fontIcon="barcode_reader"></mat-icon> Expenses</a>
+          <mat-icon fontIcon="trending_down"></mat-icon> Expenses</a>
         <a mat-list-item
            routerLinkActive="active-link"
            routerLink="/lastCommodities">
-          <mat-icon fontIcon="history"></mat-icon> Last Commodities</a>
+          <mat-icon fontIcon="shopping_cart"></mat-icon> Last Commodities</a>
         <a mat-list-item
            routerLinkActive="active-link"
            routerLink="/commodities">
-          <mat-icon fontIcon="shop"></mat-icon> Commodities</a>
+          <mat-icon fontIcon="shopping_bag"></mat-icon> Commodities</a>
         <a mat-list-item
            routerLinkActive="active-link"
            routerLink="/commodityGroups">
-          <mat-icon fontIcon="shop_two"></mat-icon> Commodities Groups</a>
+          <mat-icon fontIcon="shopping_basket"></mat-icon> Commodities Groups</a>
         <a mat-list-item
            routerLinkActive="active-link"
            routerLink="/organizations">
