--- a/apps/money-tracker-ui/src/app/expenses/balance/balance.component.html
+++ b/apps/money-tracker-ui/src/app/expenses/balance/balance.component.html
@@ -1,13 +1,12 @@
-<div *ngIf="isLoggedIn">
+
   <div>
-    <mat-form-field appearance="fill">
-      <mat-label>Available currencies</mat-label>
-      <mat-select [disabled]="this.loading" [value]="currency" (valueChange)="updateCurrencyOrPage($event)">
-        <mat-option *ngFor="let currency of currencies | keyvalue" [value]="currency.value">
-          {{currency.value}}
-        </mat-option>
-      </mat-select>
-    </mat-form-field>
+    <app-money-type-selector
+      [label]="'Available currencies'"
+      [disabled]="this.loading"
+      [currencies]="currencies"
+      [currency]="currency"
+      (currency$)="updateCurrency($event)"
+    ></app-money-type-selector>
     <div class="rubber timeHeader" [hidden]="loading">
       {{this.startDate}} -> {{this.endDate}}
     </div>
@@ -25,6 +24,5 @@
                  showFirstLastButtons>
   </mat-paginator>
 
-  <div echarts [options]="waterfall" class="waterfall" [loading]="loading"></div>
+  <div echarts [options]="chart" class="chart" [loading]="loading"></div>
 
-</div>
