--- a/apps/money-tracker-ui/src/app/accounts/accounts-dashboard/accounts-dashboard.component.html
+++ b/apps/money-tracker-ui/src/app/accounts/accounts-dashboard/accounts-dashboard.component.html
@@ -1,4 +1,3 @@
-<div *ngIf="isLoggedIn">
 
   <app-money-type-selector
     [label]="'Available currencies'"
@@ -17,7 +16,7 @@
   </div>
 
   <div echarts
-       [options]="options"
+       [options]="chart"
        (chartClick)="onChartEvent($event, 'chartClick')"
        [loading]="loading"
        class="accounts-chart"
@@ -26,7 +25,3 @@
                       (accountsBalances.length * 20 + 'px') : '200px'
        }">
   </div>
-
-
-
-</div>
