--- a/apps/money-tracker-ui/src/app/income/income-monthly/income-monthly.component.html
+++ b/apps/money-tracker-ui/src/app/income/income-monthly/income-monthly.component.html
@@ -6,19 +6,30 @@
     [currency]="currency"
     (currency$)="updateCurrency($event)"
   ></app-money-type-selector>
-  <div class="rubber timeHeader" [hidden]="loading">
-    {{this.startDate}} -> {{this.endDate}}
-  </div>
-  <div class="rubber timeHeader" [hidden]="!loading">
-    Loading...
-  </div>
+  <mat-form-field appearance="fill">
+    <mat-label>Start Month and Year</mat-label>
+    <input matInput [matDatepicker]="dps" [disabled]="loading" [formControl]="startDate">
+    <mat-hint>MM/YYYY</mat-hint>
+    <mat-datepicker-toggle matIconSuffix [for]="dps"></mat-datepicker-toggle>
+    <mat-datepicker #dps
+                    [disabled]="loading"
+                    startView="multi-year"
+                    (monthSelected)="setStartMonthAndYear($event, dps)"
+                    panelClass="example-month-picker">
+    </mat-datepicker>
+  </mat-form-field>
+  <mat-form-field appearance="fill">
+    <mat-label>End Month and Year</mat-label>
+    <input matInput [matDatepicker]="dpe" [disabled]="loading" [formControl]="endDate">
+    <mat-hint>MM/YYYY</mat-hint>
+    <mat-datepicker-toggle matIconSuffix [for]="dpe"></mat-datepicker-toggle>
+    <mat-datepicker #dpe
+                    [disabled]="loading"
+                    startView="multi-year"
+                    (monthSelected)="setEndMonthAndYear($event, dpe)"
+                    panelClass="example-month-picker">
+    </mat-datepicker>
+  </mat-form-field>
 </div>
-<mat-paginator [length]="total"
-               [pageSize]="limit"
-               [pageSizeOptions]="[12, 24, 36, 42, 48, 54, 60, 72, 78, 84, 90, 102, 108, 120, 240, 360]"
-               [pageIndex]="n"
-               (page)="setCurrentPage($event.pageIndex, $event.pageSize)"
-               aria-label="Select page"
-               [disabled]="loading"
-               showFirstLastButtons>
-</mat-paginator>
+
+<div echarts [options]="chart" class="income-chart" [loading]="loading"></div>
