[*] Better loading in accounts

--- a/apps/money-tracker-ui/src/app/accounts/accounts-dashboard/accounts-dashboard.component.html
+++ b/apps/money-tracker-ui/src/app/accounts/accounts-dashboard/accounts-dashboard.component.html
@@ -7,11 +7,11 @@
     (currency$)="updateCurrency($event)"
   ></app-money-type-selector>
 
-  <div class="rubber totalsHeader" [hidden]="this.loading">
+  <div class="rubber totalsHeader" [hidden]="this.totalsLoading">
     {{ this.total | currency: this.currency.code }}
   </div>
 
-  <div class="rubber totalsHeader" [hidden]="!(this.loading)">
+  <div class="rubber totalsHeader" [hidden]="!(this.totalsLoading)">
     Loading...
   </div>
 
