--- a/apps/money-tracker-ui/src/app/accounts/accounts-dashboard/accounts-dashboard.component.sass
+++ b/apps/money-tracker-ui/src/app/accounts/accounts-dashboard/accounts-dashboard.component.sass
@@ -6,3 +6,10 @@
   position: relative
   overflow: hidden
 
+.header
+  width: 100%
+  background: blueviolet
+  color: white
+  text-align: center
+  #span
+    width: 25%
