[+] Updated currency exchange report

--- a/apps/money-tracker-ui/src/app/accounts/exchange/exchange.component.sass
+++ b/apps/money-tracker-ui/src/app/accounts/exchange/exchange.component.sass
@@ -9,3 +9,11 @@
   text-align: center
   #span
     width: 25%
+
+.positive
+  color: green
+  font-weight: bold
+
+.negative
+  color: darkred
+  font-weight: bold
