--- a/apps/money-tracker-ui/src/app/accounts/exchange/exchange.component.html
+++ b/apps/money-tracker-ui/src/app/accounts/exchange/exchange.component.html
@@ -1,8 +1,8 @@
   <h4 *ngIf="this.report" class="header" [hidden]="loading">
     <span><b>Sold:</b> {{(this.report.sourceAmount ? this.report.sourceAmount : 0) | currency:this.sourceCurrency.code}}, </span>
     <span><b>Bought:</b> {{(this.report.destAmount ? this.report.destAmount : 0) | currency:this.destCurrency.code}}, </span>
-    <span><b>Average:</b> {{(this.report.avgRate ? this.report.avgRate : 0) | number: '1.6-8'}} , </span>
-    <span><b>Current:</b> {{this.report.curRate | number: '1.6-8'}} </span>
+    <span><b>Average:</b> {{(this.report.avgRate ? 1 / this.report.avgRate : 0) | number: '1.6-8'}} , </span>
+    <span><b>Current:</b> {{(this.report.curRate ? 1 / this.report.curRate : 0) | number: '1.6-8'}} </span>
   </h4>
 
   <h4 class="header" [hidden]="!(loading)">
@@ -29,8 +29,12 @@
     (currency$)="updatesDestCurrency($event)"
   ></app-money-type-selector>
 
-  <div class="rubber timeHeader" *ngIf="this.report && this.report.delta">
-    {{this.report.delta | currency: this.sourceCurrency.code}}
+  <div class="rubber timeHeader" *ngIf="this.report && this.report.delta"
+       [ngClass]="{
+              'positive' : this.report.delta > 0,
+              'negative' : this.report.delta < 0
+           }">
+    {{this.report.delta | currency: this.destCurrency.code}}
   </div>
 
   <ng-template #exchangeTable let-entities="entities">
@@ -82,7 +86,26 @@
 
           <ng-container matColumnDef="rate">
             <th mat-header-cell *matHeaderCellDef> Rate </th>
-            <td mat-cell *matCellDef="let element"> {{element.rate | number: '1.6-8'}} </td>
+            <td mat-cell *matCellDef="let element">
+              {{element.rate | number: '1.6-8'}}
+            </td>
+          </ng-container>
+
+          <ng-container *ngIf="this.report" matColumnDef="ratedelta">
+            <th mat-header-cell *matHeaderCellDef> Rate Delta</th>
+            <td mat-cell *matCellDef="let element">
+              {{(element.rate - this.report.curRate) | number: '1.6-8'}}
+            </td>
+          </ng-container>
+
+          <ng-container *ngIf="this.report" matColumnDef="delta">
+            <th mat-header-cell *matHeaderCellDef> Delta</th>
+            <td mat-cell *matCellDef="let element" [ngClass]="{
+              'positive' : element.sourceamount * (element.rate - this.report.curRate) > 0,
+              'negative' : element.sourceamount * (element.rate - this.report.curRate) < 0
+           }">
+              {{element.sourceamount * (element.rate - this.report.curRate) | currency: destCurrency.code}}
+            </td>
           </ng-container>
 
           <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
