[+] Added Agents Commodities and done some refactoring

--- a/apps/money-tracker-ui/src/app/expenses/balance/balance.component.html
+++ b/apps/money-tracker-ui/src/app/expenses/balance/balance.component.html
@@ -1,4 +1,4 @@
-
+<div *ngIf="isLoggedIn">
   <div>
     <app-money-type-selector
       [label]="'Available currencies'"
@@ -26,3 +26,4 @@
 
   <div echarts [options]="chart" class="chart" [loading]="loading"></div>
 
+</div>
