--- a/apps/money-tracker-ui/src/app/header/header.component.html
+++ b/apps/money-tracker-ui/src/app/header/header.component.html
@@ -25,6 +25,18 @@
         </a>
         <a mat-list-item
            routerLinkActive="active-link"
+           routerLink="/expenses">
+          <mat-icon fontIcon="trending_down"></mat-icon> Expenses</a>
+        <a mat-list-item
+           routerLinkActive="active-link"
+           routerLink="/lastCommodities">
+          <mat-icon fontIcon="history"></mat-icon> History</a>
+        <a mat-list-item
+            routerLinkActive="active-link"
+            routerLink="/commoditiesAgents">
+            <mat-icon fontIcon="local_grocery_store"></mat-icon> Users' Commodities</a>
+        <a mat-list-item
+           routerLinkActive="active-link"
            routerLink="/exchange">
           <mat-icon fontIcon="currency_exchange"></mat-icon> Currency Exchange
         </a>
@@ -33,14 +45,6 @@
            routerLink="/inOut">
           <mat-icon fontIcon="trolley"></mat-icon> Reselling
         </a>
-        <a mat-list-item
-           routerLinkActive="active-link"
-           routerLink="/expenses">
-          <mat-icon fontIcon="trending_down"></mat-icon> Expenses</a>
-        <a mat-list-item
-           routerLinkActive="active-link"
-           routerLink="/lastCommodities">
-          <mat-icon fontIcon="shopping_cart"></mat-icon> Last Commodities</a>
         <a mat-list-item
            routerLinkActive="active-link"
            routerLink="/commodities">
