--- a/apps/money-tracker-ui/src/app/income/income-monthly/income-monthly.component.html
+++ b/apps/money-tracker-ui/src/app/income/income-monthly/income-monthly.component.html
@@ -1,52 +1,21 @@
-<div>
-  <app-money-type-selector
-    [label]="'Available currencies'"
-    [disabled]="this.loading"
-    [currencies]="currencies"
-    [currency]="currency"
-    (currency$)="updateCurrency($event)"
-  ></app-money-type-selector>
-  <button mat-icon-button (click)="minusSixMonths()">
-    <mat-icon>arrow_back</mat-icon>
-  </button>
-  <mat-form-field appearance="fill">
-    <mat-label>Start Month and Year</mat-label>
-    <input matInput
-           [matDatepicker]="dps"
-           [disabled]="loading"
-           [formControl]="startDate"
-           [min]="minDate" [max]="maxDate"
-    >
-    <mat-hint>MM/YYYY</mat-hint>
-    <mat-datepicker-toggle matIconSuffix [for]="dps"></mat-datepicker-toggle>
-    <mat-datepicker #dps
-                    [disabled]="loading"
-                    startView="multi-year"
-                    (monthSelected)="setStartMonthAndYear($event, dps)"
-                    panelClass="example-month-picker">
-    </mat-datepicker>
-  </mat-form-field>
-  <mat-form-field appearance="fill">
-    <mat-label>End Month and Year</mat-label>
-    <input matInput [matDatepicker]="dpe"
-           [disabled]="loading"
-           [formControl]="endDate"
-           [min]="minDate" [max]="maxDate"
-    >
-    <mat-hint>MM/YYYY</mat-hint>
-    <mat-datepicker-toggle matIconSuffix [for]="dpe"></mat-datepicker-toggle>
-    <mat-datepicker #dpe
-                    [disabled]="loading"
-                    startView="multi-year"
-                    (monthSelected)="setEndMonthAndYear($event, dpe)"
-                    panelClass="example-month-picker">
-    </mat-datepicker>
-  </mat-form-field>
+<div *ngIf="isLoggedIn">
+  <div>
+    <app-money-type-selector
+      [label]="'Available currencies'"
+      [disabled]="this.loading"
+      [currencies]="currencies"
+      [currency]="currency"
+      (currency$)="updateCurrency($event)"
+    ></app-money-type-selector>
 
-  <button mat-icon-button (click)="plusSixMonths()">
-    <mat-icon>arrow_forward</mat-icon>
-  </button>
-
+    <app-date-range-selector 
+      [loading]="loading"
+      (startDate$)="updateStartDate($event)"
+      (endDate$)="updateEndDate($event)"
+    ></app-date-range-selector>
+  
+  </div>
+  
+  <div echarts [options]="chart" class="income-chart" [loading]="loading"></div>
+  
 </div>
-
-<div echarts [options]="chart" class="income-chart" [loading]="loading"></div>
