--- a/apps/money-tracker-ui/src/app/accounts/accounts-dashboard/accounts-dashboard.component.html
+++ b/apps/money-tracker-ui/src/app/accounts/accounts-dashboard/accounts-dashboard.component.html
@@ -21,7 +21,7 @@
       [(ngModel)]="filterZerosOut"
       (change)="onFilterEvent($event.checked)"
     >
-     Show accounts with zero balance
+     Hide accounts with zero balance
     </mat-checkbox>
 
   <div echarts
