Added new mode to the user commodities

--- a/apps/money-tracker-ui/src/app/expenses/agent-commodities/agent-commodities.component.html
+++ b/apps/money-tracker-ui/src/app/expenses/agent-commodities/agent-commodities.component.html
@@ -14,6 +14,14 @@
           (startDate$)="updateStartDate($event)"
           (endDate$)="updateEndDate($event)"
         ></app-date-range-selector>
+
+        <mat-checkbox
+        class="filter"
+        [(ngModel)]="showGroups"
+        (change)="onFilterEvent($event.checked)"
+        >
+        Break down to groups
+        </mat-checkbox>
       
       </div>
       
