--- a/apps/money-tracker-ui/src/app/about/about.component.html
+++ b/apps/money-tracker-ui/src/app/about/about.component.html
@@ -9,18 +9,20 @@
    to navigate the report topics.
 </p>
 
-<app-stats-totals-component title="Last Update" background="{{'var(--lightgreen)'}}" value={{getLastDate()}} />
+<div *ngIf="isLoggedIn">
+   <app-stats-totals-component title="Last Update" background="{{'var(--lightgreen)'}}" value={{getLastDate()}} />
 
-<app-stats-totals-component title="First Update" background="{{'var(--violet)'}}" float="right" value={{getStartDate()}} />
-
-<app-stats-totals-component title="Income Transactions" background="{{'var(--green)'}}" value={{infoAbout?.income}} />
-
-<app-stats-totals-component title="Accounts" background="{{'var(--blue)'}}" float="right" value={{infoAbout?.accounts}} />
-
-<app-stats-totals-component title="Expenses Transactions" background="{{'var(--coral)'}}" value={{infoAbout?.expenses}} />
-
-<app-stats-totals-component title="Expense Items with Tradeplaces" value={{infoAbout?.expensesTradeplace}} />
-
-<app-stats-totals-component title="Expense Items without Tradeplaces" value={{infoAbout?.expensesNoTradeplace}} />
-
-<app-stats-totals-component title="Expense Items without Commodities" value={{infoAbout?.expensesNoCommodity}} />
+   <app-stats-totals-component title="First Update" background="{{'var(--violet)'}}" float="right" value={{getStartDate()}} />
+   
+   <app-stats-totals-component title="Income Transactions" background="{{'var(--green)'}}" value={{infoAbout?.income}} />
+   
+   <app-stats-totals-component title="Accounts" background="{{'var(--blue)'}}" float="right" value={{infoAbout?.accounts}} />
+   
+   <app-stats-totals-component title="Expenses Transactions" background="{{'var(--coral)'}}" value={{infoAbout?.expenses}} />
+   
+   <app-stats-totals-component title="Expense Items with Tradeplaces" value={{infoAbout?.expensesTradeplace}} />
+   
+   <app-stats-totals-component title="Expense Items without Tradeplaces" value={{infoAbout?.expensesNoTradeplace}} />
+   
+   <app-stats-totals-component title="Expense Items without Commodities" value={{infoAbout?.expensesNoCommodity}} />
+</div>
