--- a/apps/money-tracker-ui/src/app/about/about.component.html
+++ b/apps/money-tracker-ui/src/app/about/about.component.html
@@ -22,7 +22,7 @@
    
    <app-stats-totals-component title="Expense Items with Tradeplaces" value={{infoAbout?.expensesTradeplace}} />
    
-   <app-stats-totals-component title="Expense Items without Tradeplaces" value={{infoAbout?.expensesNoTradeplace}} />
+   <app-stats-totals-component title="Expenses without Tradeplaces" value={{infoAbout?.expensesNoTradeplace}} />
    
-   <app-stats-totals-component title="Expense Items without Commodities" value={{infoAbout?.expensesNoCommodity}} />
+   <app-stats-totals-component title="Expenses without Commodities" value={{infoAbout?.expensesNoCommodity}} />
 </div>
