[*] Migrated to Angular v19 and Keycloak v19

--- a/libs/shared-components/src/lib/components/entity-list/entity-list.component.html
+++ b/libs/shared-components/src/lib/components/entity-list/entity-list.component.html
@@ -2,9 +2,7 @@
 </mat-progress-bar>
 
 <div *ngIf="error">
-  <div class="alert alert-danger">
-    {{ error }}
-  </div>
+  <app-error-message [error]="error"></app-error-message>
 </div>
 
 <div *ngIf="!error">
