[*] Fix for the tests [*] Workaround for the Docker build

--- a/libs/shared-components/src/lib/components/date-range-selector/date-range-selector.component.html
+++ b/libs/shared-components/src/lib/components/date-range-selector/date-range-selector.component.html
@@ -15,12 +15,11 @@
     <mat-hint>MM/YYYY</mat-hint>
     <mat-datepicker-toggle matIconSuffix [for]="dps"></mat-datepicker-toggle>
     <mat-datepicker
-      #dps
+      #dps="matDatepicker"
       [disabled]="loading"
       startView="multi-year"
       (monthSelected)="setStartMonthAndYear($event, dps)"
-      panelClass="example-month-picker"
-    >
+      panelClass="example-month-picker">
     </mat-datepicker>
   </mat-form-field>
   <mat-form-field appearance="fill">
