[-] Fixed bug with show groups

--- a/apps/money-tracker-ui/src/app/expenses/agent-commodities/agent-commodities.component.html
+++ b/apps/money-tracker-ui/src/app/expenses/agent-commodities/agent-commodities.component.html
@@ -16,6 +16,7 @@
 
     <mat-checkbox
       class="filter"
+      [(ngModel)]="showGroups"
       (change)="onFilterEvent($event.checked)"
     >
       Break down to groups
